--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csv-converter-to-pdf-and-html": "^1.0.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
   }
 }
