--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1237.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^3.0.0",
     "nodemon": "^2.0.19"
   }
 }
